# Econometrics-II

./: .gitignore  AssessmentCriteria.md  TipsforWriting.md  econometrics-ii-course-plan.md  exam_final.tex  pyproject.toml
Assignment1/: Assignment_1.xlsx  Assignment_1_s2026.md  assignment1.tex  forecasting_with_ARMA.tex  improvement_plan_assignment1.md  main.ipynb  received_peer_feedback_snips.md
Assignment1/tables/: table1_selection.tex  table2_estimates.tex  table3_forecast.tex  table4_gar.tex
Assignment2/: Assignment_2.xlsx  Assignment_2_s2026.md  assignment2.tex  background-paper-Caldara_Iacoviello_2022_Measuring_Geopolitical_Risk.md  main.ipynb
Assignment2/tables/: table1_lag_selection.tex  table2_diagnostics.tex  table3_granger.tex  table4_irf_focus.tex  table5_robustness.tex  table6_granger_hac.tex  table7_diag_compact.tex  (+1 more)
Assignment3/: Assignment_3.xlsx  Assignment_3_s2026.md  assignment3.tex  improvement_plan_assignment3.md  main.ipynb  plan.md  received_peer_feedback_snips.md
Assignment4/: Assignment_4.xlsx  Assignment_4_s2026.md  assignment4.tex  main.ipynb
course_notes/: 01_LikelihoodAnalysis_s2026.md  02B_Misspecification.md  02_DynamicModels_s2026.md  03_ConditionalModels_s2026.md  ProblemSet_01.md  ProblemSet_02.md  ProblemSet_model_based_inference.md
course_notes2/: GPR_SVAR_slides.md  Vector_Autoregressive_Models.md
course_notes3/: 06_Cointegration_s2026.md  08_ARCH_s2026.md  CointegratedVAR_Lecture.md  GMM_Estimation_Lecture_Notes.md
exam/: Details_exam_s2026.md  Econometrics_Exam_Part3.md  exam.tex  exam_part3_implementation_plan.md
(+14 files in other folders)
